--- a/apres.kz/articles.html
+++ b/apres.kz/articles.html
@@ -649,24 +649,42 @@
             </div>
         </div>
         <div class="pagination">
-            <div class="pagination-page">
-                <a href="articles.html">1</a>
-            </div>
-            <div class="pagination-page">
-                <a href="articles.html">2</a>
-            </div>
-            <div class="pagination-page">
-                <a href="articles.html">3</a>
-            </div>
-            <div class="pagination-page">
-                <a href="articles.html">4</a>
-            </div>
+            <a href="catalog.html">
+                <div class="pagination-page">
+                    <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M5.98042 1.79573L5.9804 1.79576L1.93135 6.99963L5.98018 12.2032C5.98022 12.2033 5.98026 12.2033 5.9803 12.2034C6.0193 12.2532 6.04931 12.3111 6.06952 12.3735C6.08975 12.436 6.1 12.5024 6.1 12.5691C6.1 12.6358 6.08975 12.7022 6.06952 12.7647C6.04934 12.827 6.01936 12.8849 5.98042 12.9347C5.94176 12.9847 5.89445 13.0262 5.84032 13.0552C5.78591 13.0843 5.72623 13.1 5.66499 13.1C5.60375 13.1 5.54407 13.0843 5.48967 13.0552C5.43552 13.0262 5.38818 12.9847 5.34951 12.9346C5.34945 12.9345 5.34938 12.9344 5.34932 12.9343L1.01982 7.3655C1.0198 7.36547 1.01977 7.36544 1.01975 7.36541C0.980728 7.31561 0.950693 7.25761 0.930481 7.19521C0.91025 7.13274 0.9 7.06633 0.9 6.99963C0.9 6.93294 0.91025 6.86652 0.930481 6.80406C0.950691 6.74167 0.980721 6.68368 1.01973 6.63388C1.01976 6.63384 1.01979 6.6338 1.01982 6.63376L5.34956 1.06462C5.42797 0.963767 5.54048 0.9 5.66499 0.9C5.72609 0.9 5.78565 0.915533 5.84 0.94449C5.89419 0.973361 5.94161 1.01469 5.98042 1.06462C6.01922 1.11452 6.04907 1.17253 6.06916 1.2349C6.08925 1.29729 6.09943 1.36359 6.09943 1.43017C6.09943 1.56376 6.05838 1.69546 5.98042 1.79573Z"
+                            stroke-width="0.2" />
+                    </svg>
+                </div>
+            </a>
+            <a href="articles.html">
+                <div class="pagination-page">1</div>
+            </a>
+
+            <a href="articles.html">
+                <div class="pagination-page">2</div>
+            </a>
+            <a href="articles.html">
+                <div class="pagination-page">3</div>
+            </a><a href="articles.html">
+                <div class="pagination-page">4</div>
+            </a>
             <div class="pagination-page">
                 ...
             </div>
-            <div class="pagination-page">
-                <a href="articles.html">8</a>
-            </div>
+            <a href="articles.html">
+                <div class="pagination-page">8</div>
+            </a>
+            <a href="catalog.html">
+                <div class="pagination-page active" style="transform: rotate(180deg);">
+                    <svg width="7" height="14" viewBox="0 0 7 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M5.98042 1.79573L5.9804 1.79576L1.93135 6.99963L5.98018 12.2032C5.98022 12.2033 5.98026 12.2033 5.9803 12.2034C6.0193 12.2532 6.04931 12.3111 6.06952 12.3735C6.08975 12.436 6.1 12.5024 6.1 12.5691C6.1 12.6358 6.08975 12.7022 6.06952 12.7647C6.04934 12.827 6.01936 12.8849 5.98042 12.9347C5.94176 12.9847 5.89445 13.0262 5.84032 13.0552C5.78591 13.0843 5.72623 13.1 5.66499 13.1C5.60375 13.1 5.54407 13.0843 5.48967 13.0552C5.43552 13.0262 5.38818 12.9847 5.34951 12.9346C5.34945 12.9345 5.34938 12.9344 5.34932 12.9343L1.01982 7.3655C1.0198 7.36547 1.01977 7.36544 1.01975 7.36541C0.980728 7.31561 0.950693 7.25761 0.930481 7.19521C0.91025 7.13274 0.9 7.06633 0.9 6.99963C0.9 6.93294 0.91025 6.86652 0.930481 6.80406C0.950691 6.74167 0.980721 6.68368 1.01973 6.63388C1.01976 6.63384 1.01979 6.6338 1.01982 6.63376L5.34956 1.06462C5.42797 0.963767 5.54048 0.9 5.66499 0.9C5.72609 0.9 5.78565 0.915533 5.84 0.94449C5.89419 0.973361 5.94161 1.01469 5.98042 1.06462C6.01922 1.11452 6.04907 1.17253 6.06916 1.2349C6.08925 1.29729 6.09943 1.36359 6.09943 1.43017C6.09943 1.56376 6.05838 1.69546 5.98042 1.79573Z"
+                            stroke-width="0.2" />
+                    </svg>
+                </div>
+            </a>
         </div>
     </div>
 </div>
@@ -759,11 +777,11 @@
       <div class="left">
         <div>© 2022 Апрес</div>
         <div>Все права защищены.</div>
-        <a href="#">Политика конфиденциальности</a>
+        <a href="policy.html">Политика конфиденциальности</a>
       </div>
       <a class="right" href='https://i-marketing.kz/' target="_blank">
         <div>Разработано</div>
-        <img src="./assets/img/icons/imarketing.svg" alt="">
+        <img src="./assets/img/icons/imarketing.svg" alt="" loading="lazy">
       </a>
     </div>
   </div>
@@ -777,61 +795,51 @@
   </div>
 </div>
 
-    <!--<div class="multiModal_bloor"></div>-->
-<!--<div class="multiModal multiModal&#45;&#45;header">-->
-<!--  <img src="./assets/img/icons/close.svg" alt="" class="multiModal_close">-->
-<!--  <div class="modalHeader">-->
-<!--    <div class="item_title">Оставьте заявку для получения обратной связи</div>-->
-<!--    <div class="item_desc">Введите свои данные и мы свяжемся с Вами:</div>-->
-<!--    <form method="POST" action="#" class="item">-->
-<!--      <div class="box">-->
-<!--        <div class="input">-->
-<!--          <img src="./assets/img/icons/user.svg" alt="">-->
-<!--          <input type="text" placeholder="Ваше имя" required>-->
-<!--        </div>-->
-<!--        <div class="input">-->
-<!--          <img src="./assets/img/icons/phoneNumber.svg" alt="">-->
-<!--          <input type="number" placeholder="Номер телефона*" required>-->
-<!--        </div>-->
-<!--        <div class="input">-->
-<!--          <img src="./assets/img/icons/email3.svg" alt="">-->
-<!--          <input type="email" placeholder="E-mail*" required>-->
-<!--        </div>-->
-<!--        <div class="select">-->
-<!--          <select name="type">-->
-<!--            <option>test1</option>-->
-<!--            <option>test2</option>-->
-<!--            <option>test3</option>-->
-<!--            <option>test4</option>-->
-<!--          </select>-->
-<!--          <img src="./assets/img/icons/select2.svg" alt="" loading="lazy">-->
-<!--        </div>-->
-<!--        <div class="textarea">-->
-<!--          <img src="./assets/img/icons/comment.svg" alt="">-->
-<!--          <textarea placeholder="Комментарий" maxlength="200" required></textarea>-->
-<!--        </div>-->
-<!--        <div class="box_col">-->
-<!--          <button type="submit">Отправить</button>-->
-<!--          <div class="confidence">Подтверждая отправку формы Я соглашаюсь на обработку персональных данных и с их-->
-<!--            <a  href="#">политикой конфиденциальности</a>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </form>-->
-<!--  </div>-->
-<!--</div>-->
-<!--<div class="multiModal multiModal&#45;&#45;thanks">-->
-<!--  <img src="./assets/img/icons/close.svg" alt="" class="multiModal_close">-->
-<!--  <div class="thanks">-->
-<!--    <div class="box">-->
-<!--      <img src="./assets/img/icons/thanks.svg" alt="">-->
-<!--      <p class="thanks_title">Ваша заявка успешно отправлена</p>-->
-<!--    </div>-->
-<!--    <div class="thanks_desc">В ближайшее время наш менеджер свяжется с Вами</div>-->
-<!--  </div>-->
-<!--</div>-->
+    <div class="thanks-modal" id="thanks-modal">
+    <div class="thanks__wrapper">
+    </div>
+    <div class="thanks__content">
+        <div class="thanks__bg">
+            <img src="./assets/img/aboutPage/about-bg1.svg" alt="image">
+        </div>
+        <div class="thanks__close" onclick="closeThanks()">
+            <img src="./assets/img/icons/close.svg" alt="icon">
+        </div>
+        <div class="thanks__title">
+            <img src="./assets/img/icons/checked-yellow.svg" alt="icon">
+            <b>Ваша заявка успешно отправлена</b>
+        </div>
+        <div class="thanks__text">В ближайшее время наш специалист свяжется с Вами</div>
+        <div class="thanks__link">
+            <a href="./catalog.html">
+                Вернуться назад
+            </a>
+        </div>
+    </div>
+</div>
 
-    <script src="./assets/js/axios.min.js"></script>
+<div class="request-modal" id="request-modal">
+    <div class="request__wrapper">
+    </div>
+    <div class="request__content">
+        <div class="request__close" onclick="closeRequest()">
+            <img src="./assets/img/icons/close.svg" alt="icon">
+        </div>
+        <div class="request__title">Оставить заявку на подбор</div>
+        <div class="request__text">Получите профессиональную консультацию от специалистов компании</div>
+        <div class="request__form">
+            <form action="">
+                <div class="request__inputs-top">
+                    <input type="text" placeholder="Имя">
+                    <input type="number" placeholder="Телефон">
+                </div>
+                <input type="text" placeholder="Название организации">
+                <button class="yellowBtn" onclick="pressSubmit()" type="">Отправить</button>
+            </form>
+        </div>
+    </div>
+</div>
+    <script src="./assets/js/axios.min.js" defer></script>
 <script src="./assets/js/jquery-3.2.1.min.js" defer></script>
 <script src="./assets/js/mask.min.js" defer></script>
 <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" defer></script>
